[gd_scene load_steps=54 format=2]

[ext_resource path="res://Scripts/Enemy_Final.gd" type="Script" id=1]
[ext_resource path="res://Sprites/EndgegnerWitch/IS_Witch_Death.png" type="Texture" id=2]
[ext_resource path="res://Sprites/EndgegnerWitch/IS_Witch_Run.png" type="Texture" id=3]
[ext_resource path="res://Sprites/EndgegnerWitch/IS_Witch_Charge.png" type="Texture" id=4]
[ext_resource path="res://Sprites/EndgegnerWitch/IS_Witch_Idle.png" type="Texture" id=5]
[ext_resource path="res://Sprites/EndgegnerWitch/IS_Witch_Attack.png" type="Texture" id=6]
[ext_resource path="res://Sprites/EndgegnerWitch/IS_Witch_Damage.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 104, 46 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 46, 104, 46 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 92, 104, 46 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 138, 104, 46 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 184, 104, 46 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 230, 104, 46 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 276, 104, 46 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 322, 104, 46 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 368, 104, 46 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 288, 32, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 336, 32, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 32, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 336, 32, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 32, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 0, 432, 32, 48 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Charge",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Damage",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 116.716, 114.031 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 12.6173, 6.54558 )

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 13.4484, 8.68628 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 13.2474, 13.5954 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 42 )
animation = "Charge"
frame = 3
playing = true

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.35147, -36.1496 )
shape = SubResource( 43 )

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -1.78466, -9.13716 )
shape = SubResource( 44 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.486961, 5.57888 )
shape = SubResource( 45 )

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -0.613571, 4.20931 )
rotation = 3.14159
__meta__ = {
"_gizmo_extents_": 15.0
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -0.584003, -0.0842628 )
shape = SubResource( 46 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_exited" from="top_checker" to="." method="_on_top_checker_body_exited"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
